[package]
name = "wesley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
base64 = "0.13.0"
bytes = "1.2.1"
color-eyre = "0.6.2"
deku = "0.13.1"
http = "0.2.8"
httparse = "1.8.0"
sha1 = "0.10.2"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
