[package]
name    = "wesley"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
base64 = "0.13.0"
bytes = "1.2.1"
color-eyre = "0.6.2"
deku = "0.14.1"
futures = "0.3.24"
http = "0.2.8"
httparse = "1.8.0"
sha1 = "0.10.2"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
